# conserFAIRy

./: README.md  index.html  package-lock.json  package.json  run-tests.sh  start-dev.sh
backend/: .env.example  .env.test  .gitignore  alembic.ini  architecture.md  classes.py  conftest.py  environment.yaml  fastapi-env.yml  main.py  oxrdflib.py  pyoxigraph.py  pyproject.toml  run_tests.sh  terminalcommands.md  test.db  tripleStore.py  tripleStoreOxigraph.py  tripleStoreRdflib.py  write.py
backend/app/: app.py  db.py  users.py
backend/aufräumen/: architecture.md
backend/classes/: Concept.py  Label.py  concept.py  conceptScheme.py  person.py
backend/conserStore/: 000028.sst  000043.sst  000056.sst  000057.sst  000058.sst  000059.sst  000060.sst  000061.sst  000062.sst  000063.sst  000373.sst  000374.sst  000375.sst  000376.sst  000377.sst  000378.sst  000379.sst  000380.sst  000383.sst  000384.sst  000385.sst  000386.sst  000387.sst  000388.sst  000389.sst  000390.sst  IDENTITY  LOG  LOG.old.1764357591976053  LOG.old.1764357669466430  LOG.old.1764357694388712  LOG.old.1764357729746800  LOG.old.1765900897051283  LOG.old.1765900932252670  LOG.old.1765900933205648  LOG.old.1765901224874362  LOG.old.1765901299440819  LOG.old.1765901300247916  LOG.old.1765901350466322  LOG.old.1765901351094587  (+29 more)
backend/mappings/: propertyMappings.json
backend/metadata/: dublinCore.py
backend/migrations/: env.py
backend/migrations/versions/: a1c17b168708_initial_user_table.py
backend/pyoxygraph/: tripleStoreOxigraph.py  tripleStoreRdflib.py
backend/tests/: test_auth.py
(+71 files in other folders)
