[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-allauth[socialaccount]>=65.18.0",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.6.2",
    "linkml>=1.11.1",
    "psycopg[binary]>=3.3.4",
    "pyoxigraph>=0.5.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.16",
]
